docs(686): heap verdict from first real-parse-pressure run + cross-refs
Partial instrumented run (founder-stopped at 31min/120 of 620 docs):
1g survives real Tika/PDFBox/POI+OCR pressure (no Full GC/OOM, live set
~500M) but with no margin — 72 evacuation-failure GC events + 179
humongous-allocation GCs in 31min from parse-buffer churn. Verdict +
raise-vs-bound follow-up recorded at DEFAULT_WORKER_HEAP javadoc and
686. Cost-tax finding: extraction cost concentrates in scanned PDFs
(serial per-page OCR, minutes/doc; bimodal cadence). 705 trigger-1
marked substantially met; corpus availability noted in 671/677.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>